Banner logo size and positioning. LESS variable renaming, and commenting.

--- a/frontend/core/src/main/webapp/static/less/foundation.less
+++ b/frontend/core/src/main/webapp/static/less/foundation.less
@@ -83,6 +83,7 @@ Text colors
 
 @color-instruction: #70c041;
 @color-error: #e22c09;
+@color-logo: #3b3b3b;
 
 /*
 Default colors for input elements
