--- a/frontend/core/src/main/webapp/static/less/inputs.less
+++ b/frontend/core/src/main/webapp/static/less/inputs.less
@@ -412,6 +412,12 @@ Use `.vertical-buttons` to make buttons align in a vertical column
 
 //////// NEW START ////////////////////////
 
+
+/*
+******************************************************************
+# Buttons
+*/
+
 @color-btn: @color-default-active;
 @color-btn-pressed: @color-default-pressed;
 @color-btn-disabled: @color-default-disabled;
