--- a/frontend/core/src/main/webapp/static/less/layout.less
+++ b/frontend/core/src/main/webapp/static/less/layout.less
@@ -38,7 +38,7 @@ TODO: em grid structure explained in plain English (when new grid structure deci
  * LEVEL 1: root
  */
 
-.container-root {
+ .container-root {
   display: table;
   width: 100%;
   height: 100%;
@@ -49,23 +49,25 @@ TODO: em grid structure explained in plain English (when new grid structure deci
  * LEVEL 2: entry, main
  */
 
-// 1. Animate maximum height change when virtual keyboard opens and closes
-.container-entry, .container-main {
+ .container-entry, .container-main {
   display: table-cell;
   vertical-align: middle;
-  // This field changes programmatically when the soft keyboard appears
-  max-height: @height-landscape-max;
-  -webkit-transition: -webkit-transform .3s ease;
-  transition: transform .3s ease;  /* [1] */
 }
 
 /*
 Entry.
 */
-// 1. Make whole page scrollabe
+// 1. Maximum height and vertical position changes programmatically when soft keyboard opens and closes.
+//    Animate vertical position change when soft keyboard opens and closes
+.container-entry {
+  -webkit-transition: -webkit-transform .3s ease; // [1]
+  transition: transform .3s ease;                 // [1]
+
+}
+// 1. Make whole page scrollable
 .container-entry--inner {
   max-height: inherit;
-  overflow-y: auto; /* [1] */
+  overflow-y: auto; // [1]
 }
 
 /*
@@ -96,17 +98,20 @@ Menu.
 /*
 Editor.
 */
-// 1.  Set editor height for sticky footer.
-// 2.  Animate maximum height change when virtual keyboard opens and closes
+// 1. Center horizontally and vertically.
+//    http://www.smashingmagazine.com/2013/08/09/absolute-horizontal-vertical-centering-css/
+// 2. Set editor height for sticky footer.
+// 3. Animate maximum height and vertical position change when soft keyboard opens and closes
 .container-editor {
-  position: absolute;
-  right: 0;
-  left: 0;
-  top: 0;
-  max-height: @height-max;
-  .center-horizontally;
-  height: 100%;                     /* [1] */
-  transition: max-height .3s ease;  /* [2] */
+  position: absolute;   // [1]
+  top: 0;               // [1]
+  bottom: 0;            // [1]
+  left: 0;              // [1]
+  right: 0;             // [1]
+  .center-horizontally; // [1]
+  height: 100%;         // [2]
+  transition: max-height .3s, transform .3s ease;                 // [3]
+  -webkit-transition: max-height .3s, -webkit-transform .3s ease; // [3]
   // FIXME
   max-width: @width-column-max;
   // FIXME
@@ -160,19 +165,14 @@ Editor.
   height: inherit;      /* [1,2] */
 }
 
-/*
+
 @media (min-height: @height-landscape-max) {
-  .container-master, .container-editor {
-    min-height: @height-landscape-max;
-    max-height: @height-landscape-max;
+  .container-editor {
     margin-top: -@height-landscape-max / 2;
     top: 50%;
   }
-  .container-master {
-    position: relative;
-  }
 }
-*/
+
 
 /*
 **************************************************************************
