Layout wireframe and fluid height fixes:  * Implemented editor, tasks slides, and entry pages.  * Commented LESS to be self-explanatory.  * Set menu, master and editor absolutely positioned.  * Removed top-level vertical centering from display: table|table-row|table-cell. Center top-level in large screens with margin-top and top properties using CSS media query  * Only change element's max-height in verticalResizeDirectice. Set directive to .container-master and .container-editor.  * Added DEGUB_toggleKeyboard function to rootViewDirective and removed elsewhere  * Refactoring, indeting and function and LESS variable renaming.
Some work towards new entry layout:
 * Refactored entry page to behave like all other pages with header and footer.
 * Only show icon without text in header.
 * Use large font.

--- a/frontend/core/src/main/webapp/static/less/foundation.less
+++ b/frontend/core/src/main/webapp/static/less/foundation.less
@@ -81,9 +81,9 @@ Grid constants
 Text colors
 */
 
-@color-instruction: #70c041;
 @color-error: #e22c09;
-@color-logo: #3b3b3b;
+@color-logo: #000000;
+@color-text-active: #0098ea;
 
 /*
 Default colors for input elements
